# hamilterm

./: .gitignore  README.md  pyproject.toml
docs/: main.tex
src/: main.py  numerics.py
src/hamilterm/: constants.py  elements.py  numerics.py  options.py  symbolics.py  symmat.py  terms.py  utils.py
